# smoltorrent

./: .envrc  .gitignore  BLOG.md  DESIGN_DOC.md  HLD.md  LLD.md  README.md  SECURITY.md  main.py  pyproject.toml  pyrightconfig.json  server.py  shard_map.json  temp.py  worker.py
.github/: FUNDING.yml
algorithms/SyncPS/: server.py  worker.py
backend/: README.md  api.py
configs/: config.yaml  dev-config.yaml
diagrams/: 01_zeroconf_suite.excalidraw  02_regular_dns.excalidraw  03_mdns_multicast.excalidraw  04_tcp_vs_udp_multicast.excalidraw  05_normal_wifi_vs_awdl.excalidraw  06_awdl_time_slicing.excalidraw  07_airdrop_phases.excalidraw  08_tcp_vs_uds.excalidraw  09_python_swift_sidecar.excalidraw  10_binary_framing.excalidraw  11_tcp_byte_stream.excalidraw  12_tcp_framing_accumulation.excalidraw  13_network_layers.excalidraw  14_swift_output_channels.excalidraw  15_launchagent_vs_launchdaemon.excalidraw  16_boot_sequence.excalidraw
discovery/: __init__.py  _mdns.py
discovery/grove/: __init__.py  _mdns.py  _types.py  _utils.py  tui.py
discovery/grove/swift/: compile.py  p2p_helper.swift
discovery/grove/transport/: __init__.py  p2p.py
docs/: blog.html  blog.md  docs.html  index.html  setup.html
docs/architecture/: watcher-boot-sequence.excalidraw  workflow-flowchart.excalidraw
docs/static/css/: index.css
docs/static/js/: index.js
frontend/: setup.html
monitoring/: .env.example  README.md  docker-compose.yml
monitoring/grafana/dashboards/: api.json  smoltorrent.json  workers.json
monitoring/grafana/provisioning/alerting/: contactpoints.yaml  policies.yaml  rules.yaml
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/loki/: loki-config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-mac.yaml  promtail-pi.yaml
networking/: __init__.py  send_receive.py  ssh_manager.py
scripts/: benchmark_plot.py  bootstrap.sh  com.smoltorrent.api.plist  com.smoltorrent.watcher.plist  grove_launch.sh  install_worker_service.sh  launch.sh  launch_monitoring.sh  seq_baseline.py  smoltorrent-worker.service  smoltorrent_startup.sh
smoltorrent/: cli.py
test/: README.md  test_api.py  test_chunk_data.py  test_cli_args_and_shard_count.py  test_dir_name_conversion.py  test_discovery.py  test_e2e_store_gather.py  test_gather_cli.py  test_gather_shards_to_master.py  test_large_file_transfer.py  test_mmap_sendfile_transfer.py  test_parallel_gather.py  test_pending_loop.py  test_received_model_inference.py  test_shard_serialization.py  test_shard_store_and_gather.py  test_shard_tracker_routing.py  test_smollm2.py  test_store_gather_redundancy.py  test_store_redundancy_parallel.py  test_watcher_logic.py  test_worker_commands.py
utils/: __init__.py  boot_exporter.py  check_workers.py  common_utils.py  dtypes.py  log_utils.py  metrics.py  network_metrics.py  observability.py  prometheus_utils.py  shard_ops.py  shard_tracker.py  worker_ops.py
watcher/: watch.py
